--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -16,11 +16,5 @@ MathJax.Hub.Config({
         processEscapes: true
     }
 });
-MathJax.Hub.Register.MessageHook("Math Processing Error",function (message) {
-    alert("Math Processing Error: "+message[1]);
-});
-MathJax.Hub.Register.MessageHook("TeX Jax - parse error",function (message) {
-  alert("Math Processing Error: "+message[1]);
-});
 </script>
-<script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.2/es5/startup.js?config=TeX-MML-AM_CHTML"></script>
+<script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML"></script>
