--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -7,7 +7,7 @@
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-.page__lead {
+html {
     font-family: $global-font-family;
     font-size: $type-size-7;
 }
