--- a/docs/_includes/scripts.html
+++ b/docs/_includes/scripts.html
@@ -28,9 +28,8 @@
 {% endif %}
 
 <!-- http://docs.mathjax.org/en/latest/options/input/tex.html?highlight=processEscapes -->
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-window.MathJax = {
+<script>
+MathJax = {
   tex: {
     loader: {load: ['[tex]/color']}, // http://docs.mathjax.org/en/latest/input/tex/extensions.html#tex-extensions
     packages: {'[+]': ['color']},        // extensions to use
@@ -43,3 +42,5 @@ window.MathJax = {
   }
 };
 </script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script type="text/javascript" id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.0.0/es5/latest?tex-mml-chtml.js"></script>
