--- a/docs/_includes/scripts.html
+++ b/docs/_includes/scripts.html
@@ -43,4 +43,4 @@ MathJax = {
 };
 </script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script type="text/javascript" id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.0.0/es5/latest?tex-mml-chtml.js"></script>
+<script type="text/javascript" id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.1.2/es5/mml-chtml.min.js"></script>
