--- a/docs/_includes/head/custom.html
+++ b/docs/_includes/head/custom.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.css">
