--- a/docs/_includes/head/custom.html
+++ b/docs/_includes/head/custom.html
@@ -1,3 +1,3 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.css">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js" integrity="sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa" crossorigin="anonymous" onload="renderMathInElementConfig();"></script>
-<script defer src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.9.1/mermaid.js" onload="mermaidConfig()"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.9.1/mermaid.js" onload="mermaidConfig();"></script>
